# 7DaysOfCode-Pokegotchi

./: .env  .gitignore  Cargo.toml  README.md  persistent.db
migrations/: 001_pokegotchi.sql  002_trainer.sql
src/: main.rs
src/config/: app_state.rs
src/domain/: mod.rs
src/domain/adapters/: mod.rs  simplify_pokemon.rs
src/domain/entities/: data.rs  mod.rs  my_pokemon.rs  pokemon.rs  pokemon_details.rs  pokemon_simplified.rs  pokemons.rs  trainer.rs
src/domain/enums/: inital_pokemons.rs  mod.rs  screen_possibilities.rs
src/domain/repositories/: mod.rs
src/domain/utils/: ascii_pokemons.rs  header.rs  mod.rs
src/infra/: mod.rs
src/infra/db/: mod.rs
src/infra/repo/: get_pokemon_info.rs  mod.rs  pokegotchi_repo_impl.rs
src/presenter/pages/: home.rs  mod.rs  my_pokemon.rs  my_pokemon_details.rs  my_pokemons.rs  pokemon_adoption.rs  pokemon_choose.rs  pokemon_details.rs
