[package]
name = "tamagochi-pokemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.17", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }

tokio = { version = "1.20.0", features = ["macros", "rt-multi-thread"]}

serde = { version = "1", features = ["derive"] }
serde_json = "1"

anyhow = {version =  "1.0.66"}
chrono = "0.4.26"
