[package]
name = "tamagochi-pokemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }

tokio = { version = "1.20.0", features = ["macros", "rt-multi-thread"]}
async-trait = "0.1.59"

sqlx = { version = "0.7.1", features = [ "runtime-tokio-native-tls" , "sqlite", "uuid", "time" ] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

dotenvy = "0.15.1"

anyhow = {version =  "1.0.66"}
chrono = {version = "0.4.26", features = ["serde"]}

async-recursion = "1.0.4"